doc:新增response example
